--- a/template-react-ts/package.json
+++ b/template-react-ts/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install && npx husky add .husky/pre-commit 'npx lint-staged' && npx husky add .husky/commit-msg 'npx --no-install commitlint --edit '$1''",
+    "eslint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "lint": "lint-staged"
   },
   "dependencies": {
+    "antd": "^4.24.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
@@ -16,10 +20,28 @@
     "tailwindcss": "^3.2.3"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.2.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "@vitejs/plugin-react": "^2.2.0",
+    "commitlint": "^17.2.0",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.4",
-    "vite": "^3.2.1"
+    "vite": "^3.2.1",
+    "vite-plugin-qiankun": "^1.0.15"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,less,md,json}": [
+      "eslint --ignore-path .eslintignore --fix",
+      "git add"
+    ]
   }
 }
