--- a/template-rollup-ts/packages/shiqi-sdk/package.json
+++ b/template-rollup-ts/packages/shiqi-sdk/package.json
@@ -23,8 +23,8 @@
     "rollup": "^2.75.7",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-esbuild": "^5.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^4.6.4"
   }
 }
