--- a/template-react-ts/package.json
+++ b/template-react-ts/package.json
@@ -12,8 +12,10 @@
     "lint": "lint-staged"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.16.1",
     "antd": "^4.24.1",
     "autoprefixer": "^10.4.13",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.2.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
