--- a/template-react-ts/package.json
+++ b/template-react-ts/package.json
@@ -12,6 +12,8 @@
     "lint": "lint-staged"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@tanstack/react-query": "^4.16.1",
     "antd": "^4.24.1",
     "autoprefixer": "^10.4.13",
@@ -19,6 +21,7 @@
     "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "tailwindcss": "^3.2.3"
   },
   "devDependencies": {
