--- a/template-react-ts/package.json
+++ b/template-react-ts/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "vite-react-typescript-starter",
-  "private": true,
+  "name": "template-react-ts",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -22,7 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "tailwindcss": "^3.2.3"
+    "tailwindcss": "^3.2.3",
+    "vite-plugin-qiankun": "^1.0.15"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.2.0",
@@ -41,8 +41,7 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
-    "vite": "^3.2.1",
-    "vite-plugin-qiankun": "^1.0.15"
+    "vite": "^3.2.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,less,md,json}": [
