--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-shiqi",
-  "version": "0.1.2-alpha.12",
+  "version": "0.1.2-alpha.13",
   "description": "",
   "type": "module",
   "bin": {
@@ -20,7 +20,7 @@
     "prepublishOnly": "npm run build"
   },
   "keywords": [],
-  "author": "<liziw2012@gmail.com>",
+  "author": " <liziw2012@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "unbuild": "^0.9.4"
@@ -35,5 +35,13 @@
     "minimist": "^1.2.7",
     "prompts": "^2.4.2",
     "typescript": "^4.8.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shiwuqi/create-shiqi.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shiwuqi/create-shiqi/issues"
+  },
+  "homepage": "https://github.com/shiwuqi/create-shiqi#readme"
 }
