--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
   "keywords": [],
   "author": " <liziw2012@gmail.com>",
   "license": "ISC",
-  "dependencies": {
-    "unbuild": "^0.9.4"
-  },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
     "@types/minimist": "^1.2.2",
@@ -34,7 +31,8 @@
     "kolorist": "^1.6.0",
     "minimist": "^1.2.7",
     "prompts": "^2.4.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "unbuild": "^1.2.1"
   },
   "repository": {
     "type": "git",
